Migrate to namespace io.descoped

--- a/lds01conf/application.properties
+++ b/lds01conf/application.properties
@@ -5,10 +5,10 @@ cluster.instance-id=lds01
 
 neo4j.driver.url=bolt://neo4j-lds-cluster:7687
 
-#sagalog.provider=no.ssb.sagalog.file.FileSagaLogInitializer
+#sagalog.provider=io.descoped.sagalog.file.FileSagaLogInitializer
 #filesagalog.folder=/sagalogs
 
-sagalog.provider=no.ssb.sagalog.pulsar.PulsarSagaLogInitializer
+sagalog.provider=io.descoped.sagalog.pulsar.PulsarSagaLogInitializer
 pulsar.service.url=pulsar://pulsar:6650
 pulsar.admin.service.url=http://pulsar:8080
 
